--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frugalfetishes-frontend-next", 
+  "name": "frugalfetishes-frontend-next",
   "private": true,
   "version": "0.1.1",
   "type": "module",
@@ -12,14 +12,15 @@
   "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "firebase": "^10.12.5"
   },
- "devDependencies": {
-  "@types/node": "22.10.2",
-  "@types/react": "18.3.12",
-  "@types/react-dom": "18.3.1",
-  "eslint": "8.57.0",
-  "eslint-config-next": "14.2.5",
-  "typescript": "5.7.2"
+  "devDependencies": {
+    "@types/node": "22.10.2",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "typescript": "5.7.2"
   }
 }
